@@ -14,6 +14,8 @@ What's new
 Minor features
 ~~~~~~~~~~~~~~
 
+ * Image upload form in image chooser now performs client side validation so that the selected file is not lost in the submission (Jack Paine)
+
 
 Bug fixes
 ~~~~~~~~~
